<resources>
    <string name="app_name">Furniture Gallery</string>
    <string name="login_app">sign in</string>
    <string name="register_app">create account</string>
    <string name="email_address_mobile_phone">Email or phone number</string>
    <string name="email_address">email address</string>
    <string name="facebook_app_id">4757100754312293</string>
    <string name="fb_login_protocol_scheme">fb4757100754312293</string>
    <string name="server_client_id"> 364137181100-he88h4c4d2k2aeik8m2ar750ocnaug6g.apps.googleusercontent.com</string>
    <string name="name">name</string>
    <string name="mobile_phone">mobile phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="address">address</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="login_with">or register with</string>
    <string name="login_with_facebook">sign by facebook </string>
    <string name="login_with_google">sign by google </string>
    <string name="register_by_login1">I don`t have an account ?</string>
    <string name="register_by_register1">I have an account ?</string>
    <string name="register_by_register2">sign in </string>
    <string name="register_by_login2">registration </string>
    <string name="search_furniture">Search for furniture</string>
    <string name="search_furniture2">Discover the best furniture</string>
    <string name="saves_offer">Savings Offers</string>
    <string name="offer_discount">Save up to 50%</string>
    <string name="discount">Discount</string>
    <string name="furniture_nearby">Furniture near you</string>
    <string name="watch_more">see more</string>
    <string name="no_data">There are no data</string>
    <string name="order_now">order now</string>
    <string name="price_offer">offer price :</string>
    <string name="check_location">location not enabled</string>
    <string name="open_location"> open location settings</string>
    <string name="cancel"> cancel</string>
    <string name="selected">Continue </string>
    <string name="title_activity_select_my_location">Map</string>
</resources>