<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context=".Activites.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/image_register" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/register_app"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name_register"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/design_edit_text"
                android:hint="@string/name"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/gray_second"
                android:textColorHint="@color/gray_second"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/et_email_register"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/design_edit_text"
                android:hint="@string/email_address"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/gray_second"
                android:textColorHint="@color/gray_second"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_mobile_phone_register"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/design_edit_text"
                android:hint="@string/mobile_phone"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/gray_second"
                android:textColorHint="@color/gray_second"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_address_register"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/design_edit_text"
                android:hint="@string/address"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/gray_second"
                android:textColorHint="@color/gray_second"
                android:textSize="13sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/design_edit_text"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/design_edit_text"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:singleLine="true"
                    android:textColor="@color/gray_second"
                    android:textColorHint="@color/gray_second"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/ui_ImageViewPasswordRegister"
                    android:layout_width="19dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/visibility_password" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/design_edit_text"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">


                <EditText
                    android:id="@+id/et_confirm_password_register"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/design_edit_text"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:singleLine="true"
                    android:textColor="@color/gray_second"
                    android:textColorHint="@color/gray_second"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/ui_ImageViewConfirmPasswordRegister"
                    android:layout_width="19dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/visibility_password" />


            </LinearLayout>


            <TextView
                android:id="@+id/tv_Continue_SingUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_design"
                android:gravity="center"
                android:text="@string/register_app"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:text="@string/register_by_register1"
                    android:textColor="@color/Color_App1"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_login_byRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_by_register2"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:textColor="@color/Color_App1"
                    android:textSize="15sp"
                    android:textStyle="normal" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>