<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activites.HomeMainActivity">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ui_ImageViewGiftbox"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/giftbox" />

                <ImageView
                    android:id="@+id/ui_ImageViewCamera"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/camera" />

                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/relativeClinicNameSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/design_edit_text"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/ui_ImageViewSearch"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/jam_filter" />

                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/tv_searchView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_furniture"
                        android:textStyle="normal"
                        android:layout_gravity="center"
                        android:textColor="@color/Color_App1"
                        android:textSize="17sp"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/ui_ImageViewFilter"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_searchview" />


                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_moreWatchCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/watch_more"
                    android:textColor="@color/btn_design"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="5dp"
                    android:text="@string/search_furniture2"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/tv_noDataCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:visibility="gone"
                    android:textStyle="normal" />

                <ProgressBar
                    android:id="@+id/progressBar_cyclic_CategoryList"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:theme="@style/ProgressBarColor"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/SwipeRefreshLayoutCategoryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_CategoryList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"/>

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_moreWatchSavesDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@string/watch_more"
                    android:textColor="@color/btn_design"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/offer_saves"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/offers_homs" />

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <TextView
                    android:id="@+id/tv_noDataSavesOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:visibility="gone"
                    android:textStyle="normal" />

                <ProgressBar
                    android:id="@+id/progressBar_cyclic_SavesOffer"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:theme="@style/ProgressBarColor"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/SwipeRefreshLayoutSavesOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_SavesOffer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"/>

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_moreWatchDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@string/watch_more"
                    android:textColor="@color/btn_design"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:text="@string/offer_discount"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/discounds_image" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>